--- a/main.html
+++ b/main.html
@@ -10,7 +10,23 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<form method="get">
+<label for="name">Name</label>
+	<input type="text" id="name" placeholder="Name">
+<label for="phone">Phone Number</label>	
+	<input type="text" id="phone" placeholder="Phone Number">
+<label for="address">Address</label>
+	<input type="text" id="address" placeholder="Address">
+<label>Have you ever lived with a Dog before?</label>
+	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+<label>Please select your preferred breeds</label>
+	<select multiple>
+		<option>German Shephrd</option>
+		<option>Rottweiler</option>
+		<option>Pit Bull</option>
+	</select>
+	<input type="submit" id="submit" value="submit">
+</form>
 </body>
 
 </html>
