--- a/main.html
+++ b/main.html
@@ -13,9 +13,9 @@
 <form method="get">
 <label for="name">Name</label>
 	<input type="text" id="name" placeholder="Name">
-
+<label for="phone">Phone Number</label>	
 	<input type="text" id="phone" placeholder="Phone Number">
-
+<label for="address">Address</label>
 	<input type="text" id="address" placeholder="Address">
 <label>Have you ever lived with a Dog before?</label>
 	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
