--- a/main.html
+++ b/main.html
@@ -17,8 +17,8 @@
 	<input type="text" id="phone" placeholder="Phone Number">
 <label for="address">Address</label>
 	<input type="text" id="address" placeholder="Address">
-<label>Have you ever lived with a Dog before?</label>
-	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+
+	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
 <label>Please select your preferred breeds</label>
 	<select multiple>
 		<option>German Shephrd</option>
