--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 
 	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
 <label>Please select your preferred breeds</label>
-	<select multiple>
+	<select multiple id="multiSelect">
 		<option>German Shephrd</option>
 		<option>Rottweiler</option>
 		<option>Pit Bull</option>
