--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 		<option>Rottweiler</option>
 		<option>Pit Bull</option>
 	</select>
-	<input type="submit" id="submit" value="submit">
+	<input type="submit" id="submit" value="Submit">
 </form>
 </body>
 
